--- a/html/package.json
+++ b/html/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "filesystem.js",
+  "main": "server.js",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
